Criando Home - Corrigindo

--- a/src/assets/globalStyle/globalStyle.css
+++ b/src/assets/globalStyle/globalStyle.css
@@ -7,4 +7,9 @@
     outline: none;
     box-sizing: none;
     font-family: "Poppins", sans-serif;
+    
+}
+
+body{
+    background-color:#212529;
 }
